Removing unnecessary /aj/ prefix requirement

--- a/src/AuthJanitor.AspNet.AdminUi/Pages/ManagedSecrets.razor
+++ b/src/AuthJanitor.AspNet.AdminUi/Pages/ManagedSecrets.razor
@@ -20,7 +20,7 @@
                     <Template>
                         <Blazorise.Buttons Role="ButtonsRole.Toolbar">
                             <Blazorise.Button Color="Color.Info"
-                                                Clicked="@(() => NavigationManager.NavigateTo($"/aj/managedSecrets/{context.ObjectId}"))">
+                                                Clicked="@(() => NavigationManager.NavigateTo($"/managedSecrets/{context.ObjectId}"))">
                                 <Icon Name="FontAwesomeIcons.Eye" Class="text-light" />
                             </Blazorise.Button>
                             <Blazorise.Button Color="Color.Danger" Clicked="@(() => { SelectedValue = context; DeleteModalShowing = true; })">
