--- a/src/AuthJanitor.AspNet.AdminUi/Shared/MainLayout.razor
+++ b/src/AuthJanitor.AspNet.AdminUi/Shared/MainLayout.razor
@@ -9,31 +9,31 @@
         <BarMenu>
             <BarStart>
                 <BarItem>
-                    <BarLink To="/aj/dashboard">
+                    <BarLink To="/dashboard">
                         <Icon Name="FontAwesomeIcons.TachometerAlt" Margin="Margin.Is1.FromRight" />
                         Dashboard
                     </BarLink>
                 </BarItem>
                 <BarItem>
-                    <BarLink To="/aj/providers">
+                    <BarLink To="/providers">
                         <Icon Name="FontAwesomeIcons.Plug" Margin="Margin.Is1.FromRight" />
                         Providers
                     </BarLink>
                 </BarItem>
                 <BarItem>
-                    <BarLink To="/aj/resources">
+                    <BarLink To="/resources">
                         <Icon Name="FontAwesomeIcons.Database" Margin="Margin.Is1.FromRight" />
                         Resources
                     </BarLink>
                 </BarItem>
                 <BarItem>
-                    <BarLink To="/aj/managedSecrets">
+                    <BarLink To="/managedSecrets">
                         <Icon Name="FontAwesomeIcons.Key" Margin="Margin.Is1.FromRight" />
                         Managed Secrets
                     </BarLink>
                 </BarItem>
                 <BarItem>
-                    <BarLink To="/aj/rekeyingTasks">
+                    <BarLink To="/rekeyingTasks">
                         <Icon Name="FontAwesomeIcons.Tasks" Margin="Margin.Is1.FromRight" />
                         Rekeying Tasks
                     </BarLink>
